--- a/capstone-fe/src/App.css
+++ b/capstone-fe/src/App.css
@@ -1,1 +1,31 @@
 
+.nav {
+  background-color: rgb(202, 218, 243);
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  padding: 8px ;
+  margin-bottom: 30px;
+}
+
+.login_main_container {
+    width: 70vw; /* 70% of the viewport width */
+    margin: 0 auto; /* Centers the container horizontally */
+    padding: 20px; /* Add normal padding, adjust as needed */
+    border: 1px solid black; /* Solid 1px border */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Full height of the viewport */
+}
+
+.signup_main_container {
+    width: 70vw; /* 70% of the viewport width */
+    margin: 0 auto; /* Centers the container horizontally */
+    padding: 20px; /* Add normal padding, adjust as needed */
+    border: 1px solid black; /* Solid 1px border */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Full height of the viewport */
+  }
