--- a/capstone-fe/src/App.css
+++ b/capstone-fe/src/App.css
@@ -155,6 +155,32 @@ p {
 
 /* personal post */
 .personal-post-container {
+  margin-left: 15px;
+}
+.single-post-detail-post-btn-container {
+  display: flex;
+  gap: 10px;
+}
+/* Create Communities */
+
+.create-new-community-form label {
+  display: flex;
+  flex-direction: column;
+  font-weight: bold;
+  margin-bottom: 12px;
+  font-size: 16px;
+  color: #333;
+}
+.create-new-community-form input,
+textarea {
+  width: 100%;
+  max-width: 400px; /* Adjust as needed */
+  padding: 10px;
+  margin-top: 5px;
+  border: 2px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  transition: border-color 0.3s ease;
 }
 /* Main Content */
 .main-content {
@@ -259,6 +285,7 @@ p {
   padding: 10px 20px;
   background-color: var(--primary-color);
   color: #fff;
+  font-size: small;
   border: none;
   border-radius: var(--border-radius);
   cursor: pointer;
@@ -296,6 +323,7 @@ p {
 .user-profile-post-btn {
   display: flex;
   gap: 5px; /* Adds space between buttons */
+  margin-left: 15px;
 }
 
 .user-post-container {
@@ -339,9 +367,24 @@ p {
 
 /* Comments */
 .comments-container {
+  display: inline;
   list-style: none;
   padding: 0;
   margin: 20px 0;
+}
+.comment-btn-container {
+  display: flex;
+  gap: 10px;
+}
+.comment-btn-container button {
+  background-color: var(--primary-color);
+  color: #fff;
+  border: none;
+  border-radius: var(--border-radius);
+  padding: 5px 10px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
 }
 .comment-item {
   background-color: var(--background-color);
@@ -350,6 +393,9 @@ p {
   padding: 15px;
   margin: 10px 0;
   transition: transform 0.3s;
+}
+.single-post-comments p {
+  color: #333;
 }
 .comment-item:hover {
   transform: translateY(-5px);
